// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FoldOut should have a height when open 1`] = `
<div
  className="dmhAZb"
>
  <div />
</div>
`;

exports[`FoldOut should have no height when closed 1`] = `
<div
  className="bSsVjP"
>
  <div />
</div>
`;

exports[`FoldOut should use the fallback and warn once ResizeObserver is not available or throws 1`] = `
<div
  className="kZzNJL"
>
  <div />
</div>
`;
